--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --color-main: #2c3e50;
+  --color-secondary: #1abc9c;
+  --colo-dark: #1a252f;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
