--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home d-flex justify-content-center align-content-center">
   <div class="home-intro my-5 text-white">
-    <img src="../../../assets/imgs/avataaars.svg" class="mb-3" />
+    <img src="./assets/imgs/avataaars.svg" class="mb-3" />
     <h2 class="fs-1 fw-bold">START FRAMEWORK</h2>
     <app-star-splitter />
     <ul class="list-unstyled d-flex justify-content-center">
