--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -5,50 +5,50 @@
     <div class="row mb-3 g-5">
       <div class="col-md-4">
         <div class="overflow-hidden rounded-3 card-parent">
-          <div class="layer" (click)="getSrc('./../assets/imgs/poert1.png')">
+          <div class="layer" (click)="getSrc('./assets/imgs/poert1.png')">
             <i class="fa fa-plus"></i>
           </div>
-          <img src="./../assets/imgs/poert1.png" alt="house" class="w-100" />
+          <img src="./assets/imgs/poert1.png" alt="house" class="w-100" />
         </div>
       </div>
       <div class="col-md-4">
         <div class="overflow-hidden rounded-3 card-parent">
-          <div class="layer" (click)="getSrc('./../assets/imgs/port2.png')">
+          <div class="layer" (click)="getSrc('./assets/imgs/port2.png')">
             <i class="fa fa-plus"></i>
           </div>
-          <img src="./../assets/imgs/port2.png" alt="house" class="w-100" />
+          <img src="./assets/imgs/port2.png" alt="house" class="w-100" />
         </div>
       </div>
       <div class="col-md-4">
         <div class="overflow-hidden rounded-3 card-parent">
-          <div class="layer" (click)="getSrc('./../assets/imgs/port3.png')">
+          <div class="layer" (click)="getSrc('./assets/imgs/port3.png')">
             <i class="fa fa-plus"></i>
           </div>
-          <img src="./../assets/imgs/port3.png" alt="house" class="w-100" />
+          <img src="./assets/imgs/port3.png" alt="house" class="w-100" />
         </div>
       </div>
       <div class="col-md-4">
         <div class="overflow-hidden rounded-3 card-parent">
-          <div class="layer" (click)="getSrc('./../assets/imgs/poert1.png')">
+          <div class="layer" (click)="getSrc('./assets/imgs/poert1.png')">
             <i class="fa fa-plus"></i>
           </div>
-          <img src="./../assets/imgs/poert1.png" alt="house" class="w-100" />
+          <img src="./assets/imgs/poert1.png" alt="house" class="w-100" />
         </div>
       </div>
       <div class="col-md-4">
         <div class="overflow-hidden rounded-3 card-parent">
-          <div class="layer" (click)="getSrc('./../assets/imgs/port2.png')">
+          <div class="layer" (click)="getSrc('./assets/imgs/port2.png')">
             <i class="fa fa-plus"></i>
           </div>
-          <img src="./../assets/imgs/port2.png" alt="house" class="w-100" />
+          <img src="./assets/imgs/port2.png" alt="house" class="w-100" />
         </div>
       </div>
       <div class="col-md-4">
         <div class="overflow-hidden rounded-3 card-parent">
-          <div class="layer" (click)="getSrc('./../assets/imgs/port3.png')">
+          <div class="layer" (click)="getSrc('./assets/imgs/port3.png')">
             <i class="fa fa-plus"></i>
           </div>
-          <img src="./../assets/imgs/port3.png" alt="house" class="w-100" />
+          <img src="./assets/imgs/port3.png" alt="house" class="w-100" />
         </div>
       </div>
     </div>
